Fix module-info and Java module configuration after containerinstance move
Co-authored-by: XiaofeiCao <92354331+XiaofeiCao@users.noreply.github.com>